--- a/css/style.css
+++ b/css/style.css
@@ -31,14 +31,57 @@ a-scene {
 
 p {
     display: block;
-    margin-top: 1em;
+    margin-top: 1.5em;
     margin-bottom: 1em;
     margin-left: 0;
     margin-right: 0;
     font-size: 1em;
 }
 
-
 .textWrapper {
     padding-left: 50;
+    padding-right: 50;
+    padding-top: 40;
+}
+
+/*
+BUTTONS
+########################################################################
+*/
+
+.button {
+    margin-top: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    text-align: center;
+    cursor: pointer;
+    background-color: aliceblue;
+    border: none;
+    position: relative;
+    box-sizing: border-box;
+    transition: all 5ms ease;
+    text-decoration: none;
+}
+
+.button:before {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 0px;
+    opacity: 1;
+    height: 100%;
+    background: dodgerblue;
+    transition: all 1s ease;
+}
+
+.button:hover:before {
+    width: 100%;
+    opacity: 0;
+}
+
+.buttonText {
+    color: black;
 }
